--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -7,21 +7,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+<header>
+    <!-- <i class="fas fa-step-backward"></i> -->
+    <a href="index.html"><i class="fas fa-step-backward"></i></a>
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script> -->
+</header>
+
 <body>
     <h1>Contact Page</h1>
     <ul1>
         <li>Phone: xxx-xxx-xxxx</li>
-        <li>Email: </li>
-        <!-- <p>
-            An image that is a link:
-            <a href="https://www.w3schools.com">
-                <img src="smiley.gif" alt="LinkedIn!"    width="42" height="42" border="0">
+        <li>Email: chouyang@mail.fresnostate.edu</li>
+        <!-- <li>
+            <a href="https://www.linkedin.com/in/chou-yang-9bb67496/" target="_blank"><i class="fab fa-linkedin"></i>
+                  
             </a>
-        </p> -->
-        
+        </li>    -->
     </ul1>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-
-
 </body>
 </html>
