--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
+<header>
+    <!-- <i class="fas fa-step-backward"></i> -->
+    <a href="index.html"><i class="fas fa-step-backward"></i></a>
+</header>
 <body>
     <h1>Current Projects</h1>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolor ad consectetur non exercitationem sed assumenda eveniet rem, aperiam voluptas nulla tenetur! Ipsa aperiam voluptate, eaque enim expedita quod. Doloribus iste adipisci fugiat vel voluptatem esse impedit est ipsam omnis laborum tenetur repudiandae accusantium laudantium possimus dolorem, debitis iusto nemo minima animi. Amet saepe corporis sit dolore eaque modi facilis ex, itaque quo esse repellendus nesciunt repellat, cupiditate temporibus perspiciatis sunt soluta, porro laborum rem architecto blanditiis ducimus velit exercitationem quos. Omnis sunt aspernatur ipsum ratione, dolores assumenda suscipit corrupti repudiandae ut, quis, cupiditate at magnam deserunt. Vel, quo vitae.
