--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -6,7 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- <div class="homepage-hero-module">
+            <div class="video-container">
+                <div class="filter"></div>
+                <video autoplay loop class="fillWidth">
+                    <source src="../portfolio/Workaholic.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="../portfolio/Workaholic.mp4" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                </video>
+                <div class="poster hidden">
+                    <img src="../portfolio/Workaholic.jpg" alt="">
+                </div>
+            </div>
+    </div> -->
 </head>
+
+
+<header>
+    <!-- <i class="fas fa-step-backward"></i> -->
+    <a href="index.html"><i class="fas fa-step-backward"></i></a>
+</header>
 <body>
     <h1>Resume and Experience</h1>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et tenetur asperiores repellat rerum error consequatur accusantium dolores facere, dolorem eius quisquam mollitia quos sunt possimus, consequuntur cupiditate laboriosam nihil nobis accusamus hic, id itaque. Nesciunt repellat voluptates explicabo laborum quisquam voluptatem reprehenderit labore nam dicta incidunt repellendus nostrum aliquam enim velit, soluta harum. Officiis ex reprehenderit nam. Quasi, sunt aliquid. Tenetur officiis non doloremque exercitationem, et dicta, eos quam libero optio iusto eveniet numquam debitis est unde magni voluptatem qui iste. Non, voluptatibus ipsa ex, sapiente vel, iusto consequuntur veniam numquam soluta quo a corrupti cupiditate tenetur at maxime? Quasi?
