update portfolio and js

--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -14,7 +14,7 @@
     <!-- <style>
     
     </style> -->
-    </head>
+    <html>
         <body>
     
             <video autoplay muted loop id="myVideo">
