--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -16,12 +16,12 @@
             </video>
             
             <div class="content">
-            <h1>Projects</h1>
+            <h1>Contact</h1>
             <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei. Id qui nemore latine molestiae, ad mutat oblique delicatissimi pro.</p>
             <ul>
-                <li>Current:</li>
-                <li>Past:</li>
-                
+                <li>Phone number:(xxx)xxx-xxxx</li>
+                <li>Email: chouyang@mail.fresnostate.edu</li>
+                <li><a href="#">LinkedIn</a><li>
             </ul>
             <!-- <a href="index.html"><i class="fas fa-step-backward"></i></a> -->
    
