--- a/game apr15/index.html
+++ b/game apr15/index.html
@@ -15,6 +15,6 @@
     <button onclick="rolldice()">Roll Dice, ftw...!?</button>
     <h2 id="status" style="clear:left;"></h2>
     
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
