--- a/game apr15/index.html
+++ b/game apr15/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <header>.25 to play (Accepts Zelle for payment only)</header>
-<h1>Are you game....?</h1>
+<img src="#" alt="">
+<h1>Ready Geekwise player, are you game....?</h1>
 <body>
     <div id="dice1">0</div>
     <div id="dice2">0</div>
