--- a/game apr15/index.html
+++ b/game apr15/index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<header>.25 to play (Accepts Zelle for payment only)</header>
+<header>Rollin' dice for the prize! Only .25 to play</header>
+<button onclick="cheatcode()">Instant win, if you know the cheat code. </button>
+<p id="demo">Clue: I have an identical twin, i'm shouted before a golf swing (2characters or numbers).</p>
 <img src="#" alt="">
 <h1>Ready Geekwise player, are you game....?</h1>
+<h2>Even and doubles you win, odd game over</h2>
 <body>
     <div id="dice1">0</div>
     <div id="dice2">0</div>
