--- a/game apr15/index.html
+++ b/game apr15/index.html
@@ -9,7 +9,7 @@
 </head>
 <header>Rollin' dice for the prize! Only .25 to play</header>
 <button onclick="cheatcode()">Instant win, if you know the cheat code. </button>
-<p id="demo">Clue: I have an identical twin, i'm shouted before a golf swing (2characters or numbers).</p>
+<p id="clue">Clue: I have an identical twin, i'm shouted before a golf swing (2characters).</p>
 <img src="#" alt="">
 <h1>Ready Geekwise player, are you game....?</h1>
 <h2>Even and doubles you win, odd game over</h2>
