--- a/game apr15/index.html
+++ b/game apr15/index.html
@@ -7,17 +7,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <header>Rollin' dice for the prize! Only .25 to play</header>
 <button onclick="cheatcode()">Instant win, if you know the cheat code. </button>
 <p id="clue">Clue: I have an identical twin, i'm shouted before a golf swing (2characters).</p>
 <img src="#" alt="">
+<h3>Stage 1</h3>
 <h1>Ready Geekwise player, are you game....?</h1>
-<h2>Even and doubles you win, odd game over</h2>
+<h2>Less than 6 you win, great than = game over</h2>
 <body>
     <div id="dice1">0</div>
     <div id="dice2">0</div>
     <button onclick="rolldice()">Roll Dice, ftw...!?</button>
     <h2 id="status" style="clear:left;"></h2>
+
+    <h4>Stage 2</h4>
+    <button onclick="cheatcode()">Instant win, if you know the cheat code. </button>
+    <p id="clue">Clue: I have an identical twin, i'm shouted before a golf swing (2characters).</p>
+
     
     <script src="js/script.js"></script>
 </body>
