--- a/game apr15/index.html
+++ b/game apr15/index.html
@@ -14,7 +14,7 @@
 <img src="#" alt="">
 <h3>Stage 1</h3>
 <h1>Ready Geekwise player, are you game....?</h1>
-<h2>Less than 6 you win, great than = game over</h2>
+<h2>Less than 6 you win, greater than 6 = game over!</h2>
 <body>
     <div id="dice1">0</div>
     <div id="dice2">0</div>
@@ -23,7 +23,7 @@
 
     <h4>Stage 2</h4>
     <button onclick="cheatcode()">Instant win, if you know the cheat code. </button>
-    <p id="clue">Clue: I have an identical twin, i'm shouted before a golf swing (2characters).</p>
+    <p id="clue">Clue: Everyone's home address is the same, logically...?</p>
 
     
     <script src="js/script.js"></script>
