game update may2

--- a/game apr15/index.html
+++ b/game apr15/index.html
@@ -18,12 +18,12 @@
 <body>
     <div id="dice1">0</div>
     <div id="dice2">0</div>
-    <button onclick="rolldice()">Roll Dice, ftw...!?</button>
+    <button onclick="unlock()">Roll Dice, ftw...!?</button>
     <h2 id="status" style="clear:left;"></h2>
 
     <h4>Stage 2</h4>
-    <button onclick="cheatcode()">Instant win, if you know the cheat code. </button>
-    <p id="clue">Clue: Everyone's home address is the same, logically...?</p>
+    <button onclick="cheatcode1()">Instant win, if you know the cheat code. </button>
+    <p id="clue">Clue: Everyone's home address is the same, logically and it will literally be in front of you...?</p>
 
     
     <script src="js/script.js"></script>
