game update may4

--- a/game apr15/index.html
+++ b/game apr15/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<header>Rollin' dice for the prize! Only .25 to play</header>
-<button onclick="cheatcode()">Instant win, if you know the cheat code. </button>
-<p id="clue">Clue: I have an identical twin, i'm shouted before a golf swing (2characters).</p>
+<header>Ready Geekwise player, are you game....?</header>
 <img src="#" alt="">
 <h3>Stage 1</h3>
-<h1>Ready Geekwise player, are you game....?</h1>
+<p id="clue">Clue: Everyone's favorite port# by default on VSCODE.</p>
+
+<button onclick="cheatcode()">Instant win, if you know the cheat code. </button>
+<h1>Rollin' dice for the prize! </h1>
 <h2>Less than 6 you win, greater than 6 = game over!</h2>
 <body>
     <div id="dice1">0</div>
@@ -24,6 +25,12 @@
     <h4>Stage 2</h4>
     <button onclick="cheatcode1()">Instant win, if you know the cheat code. </button>
     <p id="clue">Clue: Everyone's home address is the same, logically and it will literally be in front of you...?</p>
+    <header>High or low = Win!  Anything else you lose..!</header>
+    
+    <!-- <div id="high">0</div> -->
+    <!-- <button onclick="high()">Let's play!</button> -->
+    <button onclick="high()">high</button>
+    <button onclick="low()">low</button>
 
     
     <script src="js/script.js"></script>
